--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/MotherSky/restaurant-page/issues"
   },
-  "homepage": "https://github.com/MotherSky/restaurant-page#readme"
+  "homepage": "https://github.com/MotherSky/restaurant-page#readme",
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
+  }
 }
